// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard component Render default 1`] = `
<div
  className="movie-card__wrap"
>
  <div
    className="movie-card__info"
  >
    <div
      className="movie-card__desc"
    >
      <h2
        className="movie-card__title"
      >
        Bohemian Rhapsody
      </h2>
      <p
        className="movie-card__meta"
      >
        <span
          className="movie-card__genre"
        >
          Crime
        </span>
        <span
          className="movie-card__year"
        >
          2011
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`MovieCard component Render with Add Review Button 1`] = `
<div
  className="movie-card__wrap"
>
  <div
    className="movie-card__info"
  >
    <div
      className="movie-card__desc"
    >
      <h2
        className="movie-card__title"
      >
        Bohemian Rhapsody
      </h2>
      <p
        className="movie-card__meta"
      >
        <span
          className="movie-card__genre"
        >
          Crime
        </span>
        <span
          className="movie-card__year"
        >
          2011
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`MovieCard component Render with poster 1`] = `
<div
  className="movie-card__wrap"
>
  <div
    className="movie-card__info"
  >
    <div />
    <div
      className="movie-card__desc"
    >
      <h2
        className="movie-card__title"
      >
        Bohemian Rhapsody
      </h2>
      <p
        className="movie-card__meta"
      >
        <span
          className="movie-card__genre"
        >
          Crime
        </span>
        <span
          className="movie-card__year"
        >
          2011
        </span>
      </p>
    </div>
  </div>
</div>
`;
